--- a/segmentation/testxycut/README
+++ b/segmentation/testxycut/README
@@ -10,3 +10,5 @@ make (enter)
 Then look at every new pictures that have appeared in this file,
 The function being a group of recursive function, it only shows the last element that has been threw the function, the last elements being the last paragraph, last line, last word and last letter of the text, it only shows the last elements.
 Unfortunately, for now I haven't found a way to register every word/letter that was created.
+
+However, for now, it prints the text, only with a, spaces and going to the next line, looking at what's printed we can recognize the text.
