--- a/pré-traitement/traitement/README
+++ b/pré-traitement/traitement/README
@@ -2,6 +2,8 @@ To test this special part of the code, open a terminale in this directory then e
 
 make (enter)
 ./traitement (enter)
+open contrast
+open smooth
 
 - contrast picture and smooth picture were created on this directory .
 
