--- a/assemblage/test/README
+++ b/assemblage/test/README
@@ -8,5 +8,5 @@ Enter:
 make (enter)
 ./test (enter)
 
-Then see that the file was created, if you want to test with another picture, add a picture.bmp in this file and name it lorem.bmp, enter "make clean" and enter the two command upon.
+Then see that the file was created "testOCR", if you want to test with another picture, add a picture.bmp in this file and name it lorem.bmp, enter "make clean" and enter the two command upon.
 
