--- a/interface/README
+++ b/interface/README
@@ -9,6 +9,7 @@ The interface will be displayed. To exit it, press the "quit" buttons or the cro
 
 - don’t forget to make clean if you want to restart the interface
 
+- the images for the exemple in the rapport and the oral presentation are in the file images
 
 Home page:
 
